--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,8 +1,24 @@
+.main-nav__toggle {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
 .main-nav__list {
   margin: 0;
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    width: 440px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 478px;
+  }
 }
 
 .main-nav__item {
@@ -15,11 +31,24 @@
   text-align: center;
   text-transform: uppercase;
 
-  color: black;
+  @media (min-width: $tablet-width) {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 29.64px;
+  }
 }
 
 .main-nav__item a {
   text-decoration: none;
 
   color: black;
+
+  @media (min-width: $desktop-width) {
+    color: white;
+  }
 }
