--- a/source/sass/blocks/case.scss
+++ b/source/sass/blocks/case.scss
@@ -1,10 +1,24 @@
 .case {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding: 20px;
 
   background-color: $greyforcase;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
+.case__wrapper {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: auto 650px;
+    gap: 130px;
+
+    width: 1220px;
+    margin: 0 auto;
+  }
+}
 
 .case__title {
   margin: 0;
