--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,6 +2,17 @@
   padding-top: 20px;
 }
 
+.contacts__wrapper {
+  display: flex;
+  justify-content: space-between;
+
+  padding: 0 19px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 71px;
+  }
+}
+
 .contacts__invitation {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
