--- a/source/sass/blocks/how-it-works.scss
+++ b/source/sass/blocks/how-it-works.scss
@@ -1,5 +1,19 @@
 .how-it-works {
   margin-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+.how-it-works__wrapper {
+  @media (min-width: $desktop-width) {
+    max-width: 1220px;
+    margin: 0 auto;
+  }
 }
 
 .how-it-works__title {
@@ -19,4 +33,35 @@
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+.how-it-works__item {
+  @media (min-width: $tablet-width) {
+    width: 250px;
+    min-height: 280px;
+    margin-right: 130px;
+
+    &:nth-child(2n) {
+    margin-right: 75px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 70px;
+
+    &:nth-child(4n) {
+    margin-right: 0;
+    }
+  }
 }
