--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,3 +1,37 @@
 .page-header {
+  grid-area: header;
+
+  display: flex;
+  flex-direction: column;
+
   padding-top: 12px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 1220px;
+    margin: 0 auto;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.page-header__logo {
+  height: 66px;
+
+  @media (min-width: $tablet-width) {
+    height: 51.68px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 59px;
+  }
 }
