--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -8,9 +8,21 @@
 }
 
 .page__body {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "content"
+    "footer";
+  grid-template-columns: 1fr;
+  grid-template-rows:
+    min-content
+    1fr
+    min-content;
+
   min-width: 320px;
   min-height: 100%;
   margin: 0;
+
   color: $darkgrey;
 }
 
