--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,3 +6,9 @@ $greyforcase: #eaeaea;
 
 $darkgrey: #444444;
 $specialdarkgrey: #222222;
+
+// Viewports
+
+$tablet-width: 768px;
+$desktop-width: 1440px;
+$mobile-width-only: 767px;
