Адаптивная сетка для главной страницы с правками ошибок

--- a/source/sass/blocks/additional-goods.scss
+++ b/source/sass/blocks/additional-goods.scss
@@ -4,7 +4,7 @@
 }
 
 .additional-goods__title {
-  font-family: Oswald;
+  font-family: "Oswald", sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
@@ -21,7 +21,7 @@
 }
 
 .additional-good__title {
-  font-family: Oswald;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
