--- a/source/sass/blocks/basic-goods.scss
+++ b/source/sass/blocks/basic-goods.scss
@@ -15,7 +15,7 @@
 }
 
 .basic-goods__more-goods-title {
-  font-family: Oswald;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
