--- a/source/sass/blocks/page-main.scss
+++ b/source/sass/blocks/page-main.scss
@@ -33,9 +33,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 1220px-80px;
+    width: 1140px;
     margin: 0 auto;
     padding-left: 80px;
-    padding-right: 0px;
+    padding-right: 0;
   }
 }
