--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -51,7 +51,7 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 180px;
-    padding-left: 117px-30px;
+    padding-left: 87px;
 
     font-size: 20px;
     line-height: 20px;
