--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
+@import "blocks/container.scss";
 @import "blocks/promo.scss";
 @import "blocks/button.scss";
 @import "blocks/goals.scss";
