--- a/source/sass/blocks/additions.scss
+++ b/source/sass/blocks/additions.scss
@@ -5,4 +5,14 @@
   color: black;
 
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-content: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
