--- a/source/sass/blocks/basic-goods.scss
+++ b/source/sass/blocks/basic-goods.scss
@@ -8,9 +8,18 @@
   padding: 0;
 
   list-style: none;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 }
 
-.basic-goods__more-goods {
+.basic-goods__item--more-goods {
   text-align: center;
 }
 
