--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,25 +1,49 @@
 .page-header {
   grid-area: header;
 
+  box-sizing: border-box;
+  width: 100%;
+
   display: flex;
   flex-direction: column;
-
-  padding-top: 12px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
     justify-content: space-between;
   }
+
+  @media (min-width: $desktop-width) {
+    z-index: 1;
+  }
 }
 
 .page-header__logo {
-  height: 66px;
+  height: 38px;
+  padding-top: 12px;
+  padding-bottom: 16px;
+  flex-shrink: 0;
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 
   @media (min-width: $tablet-width) {
     height: 51.68px;
+    padding-top: 31px;
   }
 
   @media (min-width: $desktop-width) {
     height: 59px;
+    padding-top: 64px;
   }
+}
+
+.page-header__logo-image {
+  width: 191px;
+  height: 37.61px;
 }
