--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -2,10 +2,12 @@
 
 $basicgrey: #f2f2f2;
 $basicgreen: #68b738;
-$greyforcase: #eaeaea;
 
+$greyforcase: #eaeaea;
 $darkgrey: #444444;
+$specialgrey: #cdcdcd;
 $specialdarkgrey: #222222;
+$greyforlines: #e6e6e6;
 
 // Viewports
 
