--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,8 +1,8 @@
 .button {
-  display: inline-block;
+  display: block;
   box-sizing: border-box;
   width: 280px;
-  height: 40px;
+  min-height: 40px;
 
   font-family: "Oswald", sans-serif;
   font-size: 16px;
