--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,8 +1,18 @@
 .page-footer {
   grid-area: footer;
+
+  position: relative;
 }
 
-.page-footer__wrapper {
+.page-footer__contacts {
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 95px;
+    right: 52.8%;
+  }
+}
+
+.page-footer__icons-box {
   padding-top: 39px;
   padding-bottom: 22px;
 
@@ -11,7 +21,67 @@
   background-color: $basicgrey;
 
   @media (min-width: $tablet-width) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 52px;
+    padding-bottom: 40px;
+  }
+}
+
+.page-footer__wrapper {
+  @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.page-footer__logo {
+  margin-bottom: 27px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 170px;
+    margin: 0;
+
+    text-align: left;
+  }
+}
+
+.page-footer__logo-link {
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+.page-footer__logo img {
+  width: 128px;
+  height: 24px;
+}
+
+.page-footer__social {
+  padding: 20px 0 16px 0;
+  border-top: 1px solid #d9d9d9;
+  border-bottom: 1px solid #d9d9d9;
+
+  @media (min-width: $tablet-width) {
+    border: none;
+    padding: 0;
+  }
+}
+
+.page-footer__copyright {
+  padding-top: 14px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 170px;
+    padding: 0;
   }
 }
