--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -5,6 +5,11 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .page__body {
