--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,30 +1,42 @@
 .promo {
-  grid-row: 1 / 2;
-  grid-column: 1 / -1;
+  /*grid-row: 1 / 2;
+  grid-column: 1 / -1;*/
 
-  margin-bottom: 20px;
+  margin-bottom: 22px;
 
   background-image:
     linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
     url("../img/index-background-promo.jpg");
   background-position: top center;
   background-repeat: no-repeat;
+  background-size:
+    100% 302px,
+    320px auto;
 
   @media (min-width: $tablet-width) {
     background-image: none;
+    margin-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
+    margin-top: -141px;
+    padding-top: 141px;
+
     background-image:
       linear-gradient(to top, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
       url("../img/index-background-promo.jpg");
-    background-position: top right;
+    background-position: right center;
     background-repeat: no-repeat;
+    background-size:
+      50% 694px,
+      50% auto;
   }
 }
 
 .promo__slogan {
-  padding-top: 120px;
+  margin: 0;
+  padding-top: 124px;
+  padding-bottom: 29px;
 
   font-family: "Oswald", sans-serif;
   font-size: 14px;
@@ -36,8 +48,9 @@
   color: white;
 
   @media (min-width: $tablet-width) {
-    padding-top: 180px;
+    padding-top: 202px;
     padding-left: 87px;
+    padding-bottom: 20px;
 
     font-size: 20px;
     line-height: 20px;
@@ -46,7 +59,56 @@
     color: black;
   }
 
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: 184px;
+    left: 103px;
+  }
+}
+
+.promo__image {
+  display: block;
+  width: 280px;
+  height: 270px;
+  margin: 0 auto;
+
   @media (min-width: $tablet-width) {
-    padding-left: 80px;
+    width: 709px;
+    height: 609px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 552px;
+    height: 499px;
+    margin: 0;
+    margin-left: 448px;
+    padding-bottom: 54px;
+  }
+}
+
+.promo__button {
+  margin: 3px auto 0 auto;
+  padding-top: 11px;
+  padding-bottom: 11px;
+
+  font-size: 14px;
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: 269px;
+    left: 112px;
+    height: 54px;
+    width: 244px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+    z-index: 1;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 454px;
+    left: 190px;
   }
 }
