--- a/source/sass/blocks/additions.scss
+++ b/source/sass/blocks/additions.scss
@@ -1,6 +1,6 @@
 .additions__list {
   margin: 0;
-  padding: 0;
+  padding: 11px 0 8px 0;
 
   color: black;
 
@@ -10,9 +10,30 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-content: start;
+
+    padding: 0 0 15px 0;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 80px;
+
+    padding: 4px 0 20px 0;
+  }
+}
+
+.additions__item {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 15px;
+
+    &:nth-child(2n) {
+      margin-left: 30px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &:nth-child(2n) {
+      margin-left: 0;
+    }
   }
 }
