--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,17 +1,34 @@
 .contacts {
   padding-top: 20px;
-}
 
-.contacts__wrapper {
   display: flex;
   justify-content: space-between;
+  padding-bottom: 22px;
+
+  line-height: 20px;
 
   @media (min-width: $tablet-width) {
-    padding: 0 71px;
+    padding: 57px 71px 51px 71px;
+  }
+
+  @media (min-width: $desktop-width) {
+    box-sizing: border-box;
+    width: 570px;
+    height: 201px;
+    padding: 54px 89px 51px 76px;
+
+    background-color: white;
   }
 }
 
+.contacts--inner-page {
+  background-color: $basicgrey;
+}
+
 .contacts__invitation {
+  min-width: 140px;
+  margin: 9px 0;
+
   font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -19,4 +36,51 @@
   text-transform: uppercase;
 
   color: black;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 25px;
+  }
+}
+
+.contacts__address-wrapper {
+  min-width: 140px;
+  padding-top: 8px;
+  /*padding-left: 2px;*/
+
+  @media (min-width: $tablet-width) {
+    text-align: right;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
+}
+
+.contacts__address {
+  margin: 0;
+}
+
+.contacts__city {
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 19px;
+  }
+}
+
+.contacts__map {
+  display: block;
+  width: 320px;
+  height: 362px;
+  margin: 0 auto;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    height: 400px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+  }
 }
