--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,12 +1,81 @@
 .main-nav {
+  position: relative;
+
   @media (min-width: $tablet-width) {
     margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 50%;
   }
 }
 
 .main-nav__toggle {
+  position: absolute;
+  top: -44px;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 24px;
+  height: 18px;
+
+  background-color: #ffffff;
+
+  cursor: pointer;
+  border: none;
+
   @media (min-width: $tablet-width) {
     display: none;
+  }
+}
+
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 1.5px;
+  background-color: #000000;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
+}
+
+@media (max-width: $mobile-width-only) {
+  .main-nav--closed .main-nav__item {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
+
+  .main-nav--nojs .main-nav__list {
+    position: static;
+  }
+
+  .main-nav--nojs .main-nav__item {
+    display: block;
+  }
+}
+
+.main-nav--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: 0;
+    width: 24.76px;
+    height: 1.5px;
+    background-color: #000000;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
   }
 }
 
@@ -18,12 +87,21 @@
 
   @media (min-width: $tablet-width) {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+
+    padding-top: 19px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 10px;
   }
 }
 
 .main-nav__item {
-  margin-top: 40px;
+  position: relative;
+  padding-top: 22px;
+  padding-bottom: 24px;
 
   font-family: "Oswald", sans-serif;
   font-size: 20px;
@@ -32,30 +110,77 @@
   text-align: center;
   text-transform: uppercase;
 
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -50vw;
+    width: 100vw;
+    height: 1px;
+    background-color: #e6e6e6;
+  }
+
   @media (min-width: $tablet-width) {
-    padding-right: 35px;
+    margin-left: 35px;
 
     font-size: 18px;
     font-weight: 400;
     line-height: 24px;
 
-    &:last-child {
-      padding-right: 0;
+    &::before {
+      display: none;
+    }
+
+    &--active {
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: 14px;
+        left: 0;
+        height: 2px;
+
+        background: $basicgreen;
+      }
     }
   }
 
   @media (min-width: $desktop-width) {
+    padding-top: 60px;
+
     font-size: 20px;
-    line-height: 29.64px;
+    line-height: 30px;
   }
 }
 
-.main-nav__item a {
+.main-nav__list a {
   text-decoration: none;
 
   color: black;
+}
 
+.main-nav__list--main-page .main-nav__item--active::after {
+  @media (min-width: $desktop-width) {
+    background: white;
+  }
+}
+
+.main-nav__list--main-page a {
   @media (min-width: $desktop-width) {
     color: white;
+  }
+}
+
+.main-nav__item a[href] {
+  &:hover,
+  &:focus {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
   }
 }
