--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -3,13 +3,49 @@
 
   font-family: "Oswald", sans-serif;
   font-weight: 400;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
+
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .page-form__title {
+  position: relative;
+  margin: 27px 0;
+
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
   text-align: left;
 
   color: black;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -28px;
+    left: 50%;
+    margin-left: -50vw;
+    width: 100vw;
+    height: 1px;
+    background-color: #e6e6e6;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-top: 15px;
+
+    font-size: 60px;
+    line-height: 60px;
+
+    &::before {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 20px;
+  }
 }
