--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -1,3 +1,58 @@
 .radio__label {
+  position: relative;
+  padding: 6px 0 6px 45px;
+
   color: $specialdarkgrey;
+
+  @media (min-width: $tablet-width) {
+    padding-left: 60px;
+  }
+}
+
+.radio__input + .radio__label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+
+  box-sizing: border-box;
+  width: 30px;
+  height: 30px;
+
+  border: 1px solid $specialgrey;
+  border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+/* Checked */
+
+.radio__input:checked + .radio__label::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 8px;
+
+  width: 14px;
+  height: 14px;
+
+  background-color: $basicgreen;
+  border-radius: 50%;
+
+  @media (min-width: $tablet-width) {
+    top: 11px;
+    left: 11px;
+
+    width: 18px;
+    height: 18px;
+  }
+}
+
+/* Disabled */
+
+.radio__input:disabled + .radio__label {
+  opacity: 0.3;
 }
