--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,13 +7,13 @@
 
 // Blocks
 
+@import "blocks/button.scss";
+@import "blocks/container.scss";
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
-@import "blocks/container.scss";
 @import "blocks/promo.scss";
-@import "blocks/button.scss";
 @import "blocks/goals.scss";
 @import "blocks/how-it-works.scss";
 @import "blocks/case.scss";
@@ -24,6 +24,7 @@
 @import "blocks/page-form.scss";
 @import "blocks/application.scss";
 @import "blocks/radio.scss";
+@import "blocks/checkbox.scss";
 @import "blocks/additions.scss";
 @import "blocks/basic-goods.scss";
 @import "blocks/product-card.scss";
