--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -3,13 +3,11 @@
 
   font-family: "Oswald", sans-serif;
   font-weight: 400;
-}
 
-.page-form__title {
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 36px;
-  text-align: left;
+  @media (min-width: $tablet-width) {
+    padding: 0 40px;
 
-  color: black;
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
