--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,9 +1,50 @@
 .product-card {
+  display: grid;
+  grid-template-areas:
+    "product-image product-title"
+    "product-image product-info"
+    "product-button product-button";
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:
+    min-content
+    min-content;
+
   font-size: 12px;
   line-height: 16px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-areas:
+      "product-image"
+      "product-title"
+      "product-info"
+      "product-button";
+    grid-template-columns: 1fr;
+    grid-template-rows:
+      min-content
+      min-content
+      min-content
+      min-content;
+
+    padding: 0 36px 40px 36px;
+
+    background-image: linear-gradient(to top, $basicgrey, $basicgrey);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: 100% 430px;
+
+    font-size: 16px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 0 38px 40px 39px;
+  }
 }
 
 .product-card__title {
+  grid-area: product-title;
+
+  margin: 2px 0;
+
   font-family: "Oswald", sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -12,8 +53,96 @@
   text-transform: uppercase;
 
   color: $specialdarkgrey;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 11px;
+
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 8px;
+
+    line-height: 21px;
+  }
+}
+
+.product-card__off-mobile {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: inline-block;
+  }
+}
+
+.product-card__off-tablet {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+}
+
+.product-card__image-wrapper {
+  grid-area: product-image;
+
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    text-align: center;
+
+    margin-bottom: 27px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 40px;
+  }
+}
+
+.product-card__image {
+  width: 140px;
+  height: 112px;
+
+  @media (min-width: $tablet-width) {
+    width: 168px;
+    height: 200px;
+  }
+}
+
+.product-card__parameters-list {
+  margin: 2px 0 0 0;
+
+  @media (min-width: $desktop-width) {
+    margin-top: 8px;
+  }
+}
+
+.product-card__parameters-item {
+  grid-area: product-info;
+
+  display: flex;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    margin: 8px 0;
+    padding-bottom: 7px;
+
+    border-bottom: 1px solid $specialgrey;
+  }
 }
 
 .product-card__button {
-  padding-top: 11px;
+  grid-area: product-button;
+
+  width: 100%;
+  margin-top: 10px;
+  padding-top: 12px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 25px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 24px;
+  }
 }
