--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -153,18 +153,22 @@
 
     font-size: 20px;
     line-height: 30px;
-
-    &--active::after {
-      background-color: white;
-    }
   }
 }
 
-.main-nav__item a {
+.main-nav__list a {
   text-decoration: none;
 
   color: black;
+}
 
+.main-nav__list--main-page .main-nav__item--active::after {
+  @media (min-width: $desktop-width) {
+    background: white;
+  }
+}
+
+.main-nav__list--main-page a {
   @media (min-width: $desktop-width) {
     color: white;
   }
