--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,6 +1,6 @@
 .promo {
-  /*grid-row: 1 / 2;
-  grid-column: 1 / -1;*/
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
 
   margin-bottom: 22px;
 
@@ -33,10 +33,23 @@
   }
 }
 
+.promo__wrapper {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:
+      min-content
+      min-content;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 448px auto;
+    grid-template-rows: min-content;
+  }
+}
+
 .promo__slogan {
-  margin: 0;
-  padding-top: 124px;
-  padding-bottom: 29px;
+  margin: 124px 0 29px 0;
 
   font-family: "Oswald", sans-serif;
   font-size: 14px;
@@ -48,9 +61,9 @@
   color: white;
 
   @media (min-width: $tablet-width) {
-    padding-top: 202px;
-    padding-left: 87px;
-    padding-bottom: 20px;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    margin: 203px 0 18px 88px;
 
     font-size: 20px;
     line-height: 20px;
@@ -60,9 +73,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    position: absolute;
-    top: 184px;
-    left: 103px;
+    grid-column: 1 / 2;
+    margin: 245px 0 0 80px;
   }
 }
 
@@ -73,15 +85,18 @@
   margin: 0 auto;
 
   @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
     width: 709px;
     height: 609px;
   }
 
   @media (min-width: $desktop-width) {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
     width: 552px;
     height: 499px;
     margin: 0;
-    margin-left: 448px;
     padding-bottom: 54px;
   }
 }
@@ -94,9 +109,9 @@
   font-size: 14px;
 
   @media (min-width: $tablet-width) {
-    position: absolute;
-    top: 269px;
-    left: 112px;
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+    margin: 30px 0 0 82px;
     height: 54px;
     width: 244px;
     padding-top: 17px;
@@ -108,7 +123,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    top: 454px;
-    left: 190px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    margin: 316px 0 0 80px;
   }
 }
