--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,7 @@
 @import "blocks/page-form.scss";
 @import "blocks/application.scss";
 @import "blocks/radio.scss";
+@import "blocks/checkbox.scss";
 @import "blocks/additions.scss";
 @import "blocks/basic-goods.scss";
 @import "blocks/product-card.scss";
